--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8a16a">  <td>25/06/22 07:16:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleApiTest.getUserTest()[pri:0, instance:api.SampleApiTest@52af26ee]">getUserTest</td> 
-  <td>main@903525611</td>   <td></td> </tr>
+<tr bgcolor="70f8a6">  <td>25/06/22 08:45:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleApiTest.getUserTest()[pri:0, instance:api.SampleApiTest@4fb3ee4e]">getUserTest</td> 
+  <td>main@402249858</td>   <td></td> </tr>
 </table>
